x-overflow solved

--- a/css/custom_css.css
+++ b/css/custom_css.css
@@ -145,5 +145,8 @@ footer {
 }
 #social{
    float: right;
-   margin-right: 10px; 
+   margin-top: 5px;
+   margin-right: 10px;
+   
+
 }
